added folder structure and added contact and gallery sec css for desktop and laptop

--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -1,39 +1,45 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap');
 /*Resets*/
-html,body{
-    scroll-behavior: smooth;
-    width: 100%;
-    height: 100%;
-    margin: 0%;
-    padding: 0%;
+html,
+body {
+  scroll-behavior: smooth;
+  width: 100%;
+  height: 100%;
+  margin: 0%;
+  padding: 0%;
+  font-family: 'Montserrat', sans-serif;
 }
-*{
-    margin: 0%;
-    padding: 0%;
-    box-sizing: border-box;  
-}
-
-section{
-    width: 100%;
-    overflow-x: hidden;
+* {
+  margin: 0%;
+  padding: 0%;
+  box-sizing: border-box;
 }
 
-li{
-    list-style: none;
+section {
+  width: 100%;
+  overflow-x: hidden;
 }
 
-a{
-    text-decoration: none;
+li {
+  list-style: none;
 }
 
-img{
-    height: auto;
-    width: 100%;
-  }
+a {
+  text-decoration: none;
+}
 
+img {
+  height: auto;
+  width: 100%;
+}
 
+.container{
+  height: inherit;
+  margin: 0% auto;
+}
 
 /*Colors Variables*/
-$primary-one : #fff;
-$primary-two : #000;
-$bg-color : #eee;
-$complementary-color : #F8BD59;
+$primary-one: #fff;
+$primary-two: #000;
+$bg-color: #eee;
+$complementary-color: #f8bd59;
