--- a/styles/about-styles/about.css
+++ b/styles/about-styles/about.css
@@ -49,4 +49,4 @@ img {
 /*Normal iphone 6 / x ends*/
 /*Iphone se (Small devices) starts*/
 /*Iphone se (Small devices) ends*/
-/*# sourceMappingURL=index.css.map */
+/*# sourceMappingURL=about.css.map */
