--- a/styles/contact-styles/contact.css
+++ b/styles/contact-styles/contact.css
@@ -10,6 +10,8 @@ body {
   margin: 0%;
   padding: 0%;
   font-family: 'Montserrat', sans-serif;
+  position: relative;
+  overflow-x: hidden;
 }
 
 * {
@@ -52,6 +54,8 @@ body {
   margin: 0%;
   padding: 0%;
   font-family: 'Montserrat', sans-serif;
+  position: relative;
+  overflow-x: hidden;
 }
 
 * {
@@ -249,6 +253,8 @@ body {
   margin: 0%;
   padding: 0%;
   font-family: 'Montserrat', sans-serif;
+  position: relative;
+  overflow-x: hidden;
 }
 
 * {
