--- a/styles/gallary-styles/gallary.css
+++ b/styles/gallary-styles/gallary.css
@@ -10,6 +10,8 @@ body {
   margin: 0%;
   padding: 0%;
   font-family: 'Montserrat', sans-serif;
+  position: relative;
+  overflow-x: hidden;
 }
 
 * {
@@ -52,6 +54,8 @@ body {
   margin: 0%;
   padding: 0%;
   font-family: 'Montserrat', sans-serif;
+  position: relative;
+  overflow-x: hidden;
 }
 
 * {
@@ -249,6 +253,8 @@ body {
   margin: 0%;
   padding: 0%;
   font-family: 'Montserrat', sans-serif;
+  position: relative;
+  overflow-x: hidden;
 }
 
 * {
@@ -715,6 +721,63 @@ img {
 
 /*Desktop Media Quries Ends*/
 /*Normal iphone 6 / x Starts*/
+@media (max-width: 400px) {
+  .wrapper-section {
+    width: 100%;
+    height: auto;
+  }
+  .wrapper-section .bg-layer {
+    width: 100%;
+    height: auto;
+  }
+  .hero-section {
+    width: 100%;
+    height: auto;
+    padding: 80px 0;
+    overflow-x: hidden;
+  }
+  .hero-section .container {
+    width: 89%;
+  }
+  .hero-section .container .flex-wrapper h1 {
+    font-size: 32px;
+  }
+  .hero-section .container .flex-wrapper h2 {
+    font-size: 17px;
+    line-height: 25px;
+    margin-bottom: 38px;
+  }
+  .hero-section .container .flex-wrapper .btn {
+    padding: 24px 22px;
+    font-size: 12px;
+  }
+  .gallery {
+    width: 100%;
+    overflow-x: hidden;
+  }
+  .gallery .container {
+    width: 95%;
+  }
+  .gallery .container .wrapper {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    width: 100%;
+    height: auto;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .gallery .container .wrapper img {
+    width: 95%;
+    margin: 0% auto;
+  }
+}
+
 /*Normal iphone 6 / x ends*/
 /*Iphone se (Small devices) starts*/
 /*Iphone se (Small devices) ends*/
