--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -8,11 +8,13 @@ body {
   margin: 0%;
   padding: 0%;
   font-family: 'Montserrat', sans-serif;
+  position: relative;
+  overflow-x: hidden;
 }
 * {
   margin: 0%;
   padding: 0%;
-  box-sizing: border-box;
+  box-sizing: border-box; 
 }
 
 section {
