--- a/styles/about-styles/about.scss
+++ b/styles/about-styles/about.scss
@@ -235,9 +235,9 @@
           }
         }
       }
-      .bottom{
-        .left{
-          .ceo-image{
+      .bottom {
+        .left {
+          .ceo-image {
             width: 611px;
             height: 387px;
           }
@@ -250,10 +250,117 @@
 
 /*Normal iphone 6 / x Starts*/
 @media (max-width: 400px) {
+  .wrapper-section {
+    width: 100%;
+    height: auto;
+    .bg-layer {
+      width: 100%;
+      height: auto;
+    }
+  }
+  //hero-section
+  .hero-section {
+    width: 100%;
+    height: auto;
+    padding: 80px 0;
+    overflow-x: hidden;
+    .container {
+      width: 89%;
+      .flex-wrapper {
+        h1 {
+          font-size: 32px;
+        }
+        h2 {
+          font-size: 17px;
+          line-height: 25px;
+          margin-bottom: 38px;
+        }
+        .btn {
+          padding: 24px 22px;
+          font-size: 12px;
+        }
+      }
+    }
+  }
+  //main-section
+  .main-section {
+    height: auto;
+    .container {
+      width: 95%;
+      height: auto;
+      flex-direction: column;
+      .top,
+      .bottom {
+        flex-direction: column;
+        width: 100%;
+        align-items: flex-start;
+        text-align: start;
+        .left {
+          width: 100%;
+          padding-bottom: 50px;
+        }
+        .right {
+          width: 100%;
+        }
+        .left,
+        .right {
+          h1 {
+            font-size: 16px;
+          }
+          h2,
+          h3 {
+            font-size: 13px;
+          }
+        }
+      }
+      .bottom {
+        flex-direction: column;
+        width: 100%;
+        .left {
+          .ceo-image {
+            width: 100%;
+          }
+        }
+      }
+    }
+  }
 }
 /*Normal iphone 6 / x ends*/
 
 /*Iphone se (Small devices) starts*/
 @media only screen and (min-width: 320px) and (max-width: 370px) {
+  .main-section {
+    .container {
+      .top,
+      .bottom {
+        .left,
+        .right {
+          h2,
+          h3 {
+            font-size: 11px;
+          }
+        }
+      }
+      .top {
+        .left {
+          .btn {
+            padding: 20px 30px;
+            font-size: 11px;
+          }
+        }
+      }
+      .bottom {
+        .social-links {
+          a {
+            img {
+              width: 40px;
+              height: 40px;
+              margin: 0px 9px;
+            }
+          }
+        }
+      }
+    }
+  }
 }
 /*Iphone se (Small devices) ends*/
