--- a/styles/gallary-styles/gallary.scss
+++ b/styles/gallary-styles/gallary.scss
@@ -125,6 +125,57 @@
 
 /*Normal iphone 6 / x Starts*/
 @media (max-width: 400px) {
+  .wrapper-section {
+    width: 100%;
+    height: auto;
+    .bg-layer {
+      width: 100%;
+      height: auto;
+    }
+  }
+  //hero-section
+  .hero-section {
+    width: 100%;
+    height: auto;
+    padding: 80px 0;
+    overflow-x: hidden;
+    .container {
+      width: 89%;
+      .flex-wrapper {
+        h1 {
+          font-size: 32px;
+        }
+        h2 {
+          font-size: 17px;
+          line-height: 25px;
+          margin-bottom: 38px;
+        }
+        .btn {
+          padding: 24px 22px;
+          font-size: 12px;
+        }
+      }
+    }
+  }
+  //gallert-section
+  .gallery{
+    width: 100%;
+    overflow-x: hidden;
+    .container{
+      width: 95%;
+      .wrapper{
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        height: auto;
+        justify-content: center;
+        img{
+          width: 95%;
+          margin: 0% auto;
+        }
+      }
+    }
+  }
 }
 /*Normal iphone 6 / x ends*/
 
