--- a/index_styles/index.scss
+++ b/index_styles/index.scss
@@ -396,9 +396,94 @@
           padding: 20px 90px;
         }
       }
-      .timeline{
-        h6{
+      .timeline {
+        h6 {
           font-size: 28px;
+        }
+      }
+    }
+  }
+  //why choose us
+  .why-choose-us {
+    height: auto;
+    padding: 120px 0;
+    .container {
+      .card-wrapper {
+        .card {
+          .container {
+            img {
+              width: 90px;
+              height: 90px;
+              margin-bottom: 32px;
+            }
+            h2 {
+              font-size: 35px;
+            }
+            p {
+              max-width: 100%;
+              font-size: 15px;
+              font-weight: 500;
+              margin-bottom: 68px;
+              line-height: 25px;
+            }
+            a {
+              padding: 13px 45px;
+              font-size: 15px;
+              width: 35%;
+            }
+          }
+        }
+      }
+    }
+  }
+  //gallery sec
+  .gallery-section {
+    height: auto;
+    padding: 120px 0;
+    .container {
+      a {
+        padding: 18px 45px;
+        font-size: 20px;
+      }
+    }
+  }
+  //testimonail sec
+  .testmonial-sec {
+    height: auto;
+    padding: 120px 0 200px;
+    .container {
+      .swiper {
+        width: 94%;
+        .flex-wrapper {
+          width: 100%;
+          .left {
+            flex: none;
+            transform: translateX(16%);
+          }
+          .right {
+            flex: none;
+            width: 50%;
+            transform: translateX(15%);
+            h1 {
+              font-size: 30px;
+              margin-bottom: 16px;
+            }
+            h2 {
+              font-size: 25px;
+              margin-bottom: 28px;
+            }
+            p {
+              font-size: 19px;
+              line-height: 35px;
+              max-width: 777px;
+            }
+          }
+        }
+        .swiper-button-next {
+          right: 32px;
+        }
+        .swiper-button-prev {
+          left: 32px;
         }
       }
     }
@@ -440,10 +525,170 @@
       }
     }
   }
+  //who we are section
+  .who-we-are-section {
+    height: auto;
+    padding: 60px 0;
+    .container {
+      width: 95%;
+      .title {
+        font-size: 27px;
+      }
+      .title::after {
+        width: 63px;
+      }
+      h2 {
+        max-width: 95%;
+        font-size: 19px;
+        font-weight: 500;
+        line-height: 29px;
+        margin-bottom: 55px;
+      }
+      .btn-wrapper {
+        gap: 0 40px;
+        a {
+          padding: 17px 40px;
+          font-size: 15px;
+        }
+      }
+      .timeline {
+        display: none;
+        margin-left: 0px;
+        width: 95%;
+      }
+    }
+  }
+  //why choose us sec
+  .why-choose-us {
+    height: auto;
+    padding: 60px 0;
+    .container {
+      width: 95%;
+      .title {
+        font-size: 27px;
+      }
+      .title::after {
+        width: 63px;
+      }
+      .card-wrapper {
+        flex-direction: column;
+        gap: 50px 0;
+        .card {
+          width: 100%;
+          height: 100%;
+        }
+      }
+    }
+  }
+  //gallery section
+  .gallery-section {
+    height: auto;
+    padding: 60px 0;
+    .container {
+      width: 95%;
+      .title {
+        font-size: 27px;
+      }
+      .title::after {
+        width: 63px;
+      }
+      .img-wrapper {
+        flex-direction: column;
+        width: 100%;
+        gap: 50px 0;
+        img {
+          width: 100%;
+        }
+      }
+      a {
+        font-size: 12px;
+      }
+    }
+  }
+  //testimonial section
+  .testmonial-sec {
+    height: auto;
+    .container {
+      width: 95%;
+      .title {
+        font-size: 27px;
+      }
+      .title::after {
+        width: 63px;
+      }
+      .swiper {
+        height: auto;
+        padding: 50px 0;
+        .swiper-button-next,
+        .swiper-button-prev {
+          top: 41%;
+        }
+        .flex-wrapper {
+          height: auto;
+          flex-direction: column;
+          gap: 180px 0;
+          padding: 30px 18px;
+          .left {
+            width: 100%;
+            height: 40%;
+            img {
+              width: 80%;
+              height: 80%;
+            }
+          }
+          .right {
+            text-align: center;
+            width: 100%;
+            height: 60%;
+          }
+        }
+      }
+    }
+  }
 }
 /*Normal iphone 6 / x ends*/
 
 /*Iphone se (Small devices) starts*/
 @media only screen and (min-width: 320px) and (max-width: 370px) {
+  //who we are section
+  .who-we-are-section {
+    padding: 80px 0 40px;
+    .container {
+      h2 {
+        font-size: 17px;
+      }
+      .btn-wrapper {
+        gap: 0 20px;
+        a {
+          padding: 17px 39px;
+          font-size: 12px;
+          width: 127px;
+        }
+      }
+    }
+  }
+  //why choose us section
+  .why-choose-us {
+    padding: 80px 0 40px;
+    .container {
+      .card-wrapper {
+        .container {
+          padding: 57px 20px 35px 23px;
+          .card {
+            height: 700px;
+          }
+        }
+      }
+    }
+  }
 }
 /*Iphone se (Small devices) ends*/
+
+//ipad
+@media only screen and (min-width: 768px) and (max-width: 1023px) {
+}
+
+//ipad pro
+@media only screen and (min-width: 1024px) and (max-width: 1100px) {
+  
+}
